# ETL-From-SQL-Server-To-DuckDB

./: .gitignore  404.html  README.md  from_sql_server.db  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: CI.yml
app/: etl.py  extract_validation.py
config/: config.py
docs/: index.md
schema/: schema_AdventureWorks.py
search/: search_index.json
sql/: SELECT_PERSON.sql
